Corrections activité en version mobile et ajustements des tailles + margin/padding

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 p, a {
     font-family: 'Raleway', sans-serif;
     color: rgb(66, 66, 66);
-    font-size: 14px;
+    font-size: 12px;
     text-decoration: none;
 }
 
@@ -23,11 +23,11 @@ h1, h2, h3 {
 }
 
 h1, h2 {
-    font-size: 20px;
+    font-size: 18px;
 }
 
 h3 {
-    font-size: 15px;
+    font-size: 12px;
 }
 
 .star-on, .filter-icon {
@@ -38,8 +38,7 @@ h3 {
 
 #container {
     margin: 0 auto 0 auto;
-    max-width: 1366px;
-    padding: 0 20px 0 20px;
+    max-width: 993px;
 }
 
 /* Menu */
@@ -74,6 +73,10 @@ nav ul li a:active {
 
 /* Header */
 
+header {
+    padding: 0 30px 0 30px;
+}
+
 #logo {
     display: flex;
     flex-direction: column;
@@ -92,7 +95,7 @@ header p {
 
 #search {
     margin-top: 15px;
-    height: 40px;
+    height: 35px;
     width: 100%;
     max-width: 100%;
     display: flex;
@@ -108,15 +111,15 @@ header p {
 
 #search input {
     box-sizing: border-box;
-    border-top: 2px #F2F2F2 solid;
-    border-bottom: 2px #F2F2F2 solid;
+    border-top: 1px #F2F2F2 solid;
+    border-bottom: 1px #F2F2F2 solid;
     border-left: 0;
     border-right: 0;
     padding-left: 10px;
 }
 
 #gps-icon {
-    width: 40px;
+    width: 35px;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     background-color: #F2F2F2;
@@ -165,7 +168,7 @@ header p {
 
 .filter-option {
     margin: 0 10px 10px 0;
-    height: 40px;
+    height: 35px;
     display: flex;
     border: 2px #F2F2F2 solid;
     border-radius: 30px;
@@ -176,13 +179,17 @@ header p {
 }
 
 .filter-icon {
-    height: 40px;
-    width: 40px;
+    height: 35px;
+    width: 35px;
     border-radius: 30px;
     background-color: #DEEBFF;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.icon-select {
+    font-size: small;
 }
 
 /* Info under filters */
@@ -199,7 +206,7 @@ header p {
     width: 20px;
     height: 20px;
     border: 2px #F2F2F2 solid;
-    border-radius: 10px;
+    border-radius: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -214,6 +221,10 @@ header p {
 
 /* Section for the results of the search */
 
+main {
+    padding: 0 30px 0 30px;
+}
+
 #results {
     width: 100%;
     display: flex;
@@ -227,10 +238,10 @@ header p {
     background-color: #F2F2F2;
     border-radius: 10px;
     width: 100%;
-    max-width: 840px;
+    max-width: 570px;
     height: 100%;
     padding: 30px 20px 30px 20px;
-    margin: 0 10px 30px 0;
+    margin: 0 0 30px 0;
 }
 
 #accomodation h2 {
@@ -247,10 +258,10 @@ header p {
 .accomodation-result {
     background-color: white;
     width: 100%;
-    max-width: 250px;
-    height: 200px;
+    max-width: 170px;
+    height: 150px;
     margin-bottom: 30px;
-    padding: 5px;
+    padding: 3px;
     border-radius: 20px;
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.048);
     display: flex;
@@ -260,15 +271,15 @@ header p {
 .accomodation-result img {
     width: 100%;
     height: 66%;
-    border-radius: 16px 16px 0 0;
+    border-radius: 18px 18px 0 0;
 }
 
 .accomodation-result figcaption {
-    height: 60px;
+    height: 50px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 10px 0 5px 15px;
+    padding: 8px 0 0 15px;
 }
 
 #show-more {
@@ -283,7 +294,7 @@ header p {
 }
 
 .star-on, .star-off {
-    font-size: smaller;
+    font-size: x-small;
 }
 
 .star-off {
@@ -297,7 +308,7 @@ header p {
     border-radius: 10px;
     width: 100%;
     height: 100%;
-    max-width: 420px;
+    max-width: 260px;
     padding: 30px 20px 17px 20px;
 }
 
@@ -321,9 +332,9 @@ header p {
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 140px;
-    margin-bottom: 20px;
-    padding: 5px;
+    height: 111px;
+    margin-bottom: 15px;
+    padding: 3px;
     border-radius: 20px;
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.048);
 }
@@ -332,17 +343,17 @@ header p {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 10px 0 10px 15px;
+    padding: 10px 0 10px 10px;
 }
 
 .popular-result figcaption p {
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 }
 
 .popular-result img {
-    width: 33%;
+    width: 100px;
     height: 100%;
-    border-radius: 15px 0 0 15px;
+    border-radius: 18px 0 0 18px;
 }
 
 #popular-title {
@@ -358,7 +369,7 @@ header p {
 
 #activity {
     width: 100%;
-    margin: 50px 0 50px 0;
+    margin: 0 0 50px 0;
 }
 
 #activity-list {
@@ -372,7 +383,7 @@ header p {
 
 .activity-result {
     width: 100%;
-    max-width: 315px;
+    max-width: 215px;
     height: 400px;
     display: flex;
     flex-wrap: wrap;
@@ -513,16 +524,23 @@ footer {
 
 #results {
     flex-wrap: wrap-reverse;
+    padding: 0;
+}
+
+/* remove padding from main */
+
+main {
+    padding: 0;
 }
 
 /* accomodation  */
 
 #accomodation {
     background-color: transparent;
+    max-width: 100%;
 }
 
 .accomodation-result {
-    width: 100%;
     max-width: 100%;
 }
 
@@ -535,13 +553,14 @@ footer {
 
 /* Activity  */
 
+#activity-container {
+    padding: 0 20px 0 20px;
+}
+
 .activity-result {
     max-width: 100%;
     height: 100%;
     margin-bottom: 0px;
-}
-
-.activity-result img {
 }
 
 #irregular1, #irregular2, #irregular3, #irregular4, .activity-regular {
